# nightly

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: blank.yml
example_config/: jobs.yaml  resources.yaml
schema/: 0001-create-table-log.sql  1002-delete-stdout-stderr-field.sql  1003-add-cwd-column.sql  1004-add-env-column.sql
scripts/: launch  launch-nightly
src/: common.py  launcher.py  main.py  model.py  notif.py  panel.py  resource.py  runner.py  scheduler.py
src/static/css/: main.css
src/static/js/: main.js
src/templates/: index.html  job.jinja2  output.html
