[tool.poetry]
name = "nightly"
version = "0.1.0"
description = ""
authors = ["Zhen Zhang <pip@zhen-zhang.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "5.2"
PyMySQL = "0.9.3"
msbase = { git = "https://github.com/izgzhen/msbase.py" }
flask = "1.1.1"
mypy = "^0.761"
Flask-BasicAuth = "^0.2.0"
path = "^13.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
mypy = "^0.761"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
